--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 </head>
 
 <body>
-  <section id="welcome">
+  <section id="top">
     <div class="line"></div>
-    <img class="welcome-img" src="img/image_from_ios.png" alt="CM logo" />
+    <img class="top-img" src="img/image_from_ios.png" alt="CM logo" />
     <div class="line"></div>
   </section>
-  <!-- End Welcome -->
+  <!-- End Top -->
 
   <section id="intro">
     <div class="intro-title"><h2>Take the Risk</h2></div>
@@ -38,45 +38,42 @@
         in Central Texas. In a few short months, we found it was worth the risk.
         We started projects we wouldn't even have thought of back in Georgia. I
         was able to enroll in an online full-stack development course, and we
-        are finding our adventure is really just beginning.
+        are finding our adventure is really just beginning. <br />** Update - I
+        completed the course and headed back to Atlanta for a career
+        opportunity. (More updates to come)
       </p>
     </div>
     <!-- End Intro Body -->
   </section>
   <!-- End Intro -->
 
-  <section id="about">
-    <div class="bg"></div>
-    <div class="about-me">
-      <img
-        class="about-img"
-        src="img/about.jpg"
-        alt="A picture of Cliff McCall"
-      />
-      <div class="about-title">
+  <!-- <section id="about">
+    <div class="row">
+      <div class="about-me col-sm-5 offset-sm-1">
+        <img
+          class="about-img"
+          src="img/about.jpg"
+          alt="A picture of Cliff McCall"
+        />
+      </div>
+      <div class="about-title col-sm-3 offset-sm-1">
         <h1>Cliff McCall<span>Full Stack JavaScript Developer</span></h1>
       </div>
-      <!-- end About Title -->
     </div>
-  </section>
-  <!-- end about-me -->
+  </section> -->
 
-  <section id="skills">
+  <!-- <section id="skills">
     <div class="container-fluid icons">
       <div class="row align-items-center">
         <div class="col-sm-8 offset-sm-2"><p>Technical Skills</p></div>
-        <!-- end col -->
       </div>
-      <!-- end row -->
       <div class="row align-items-center">
         <div class="col-sm-6 offset-sm-3">
           <img src="img/html.png" alt="HTML" />
           <img src="img/css.png" alt="CSS" />
           <img src="img/js.png" alt="JavaScript" />
         </div>
-        <!-- end col -->
       </div>
-      <!-- end row -->
       <div class="row align-items-center">
         <div class="col-sm-8 offset-sm-2">
           <img src="img/react.png" alt="React" />
@@ -84,9 +81,7 @@
           <img src="img/node.png" alt="Node.js" />
           <img src="img/mongodb.png" alt="" />
         </div>
-        <!-- end col -->
       </div>
-      <!-- end row -->
       <div class="row align-items-center">
         <div class="col-sm-6 offset-sm-3">
           <img src="img/c.png" alt="C#" /> <img src="img/net.png" alt=".NET" />
@@ -94,9 +89,7 @@
         </div>
       </div>
     </div>
-    <!-- end container -->
-  </section>
-  <!-- End about-text -->
+  </section> -->
 
   <section id="certifications">
     <div class="certifications-title">Certifications</div>
