--- a/index.html
+++ b/index.html
@@ -38,16 +38,25 @@
         in Central Texas. In a few short months, we found it was worth the risk.
         We started projects we wouldn't even have thought of back in Georgia. I
         was able to enroll in an online full-stack development course, and we
-        are finding our adventure is really just beginning. <br />** Update - I
-        completed the course and headed back to Atlanta for a career
-        opportunity. (More updates to come)
+        are finding our adventure is really just beginning.
+      </p>
+      <p>
+        In 2019, the process took us back to where we started, we had a new lease on life in Georgia.
+        I started work as a QA Enginner for a Saas company, which led to a hiatus on spending time with 
+        JavaScript. The position required new challenges with working with C# and selenium for automation testing. Engineering has been a wild ride, and the point of this career change was to be in a position where I never have to stop learning.
+        This has been true every step of the way, and I'm enjoying every minute of it. 
+      </p>
+      <p>
+        What is next on the horizon? 
+        <br/ >I'm not sure, but I did start diving back into React recently (mid 2020), and made a few changes to this personal site.
+        As I write this I'm thinking, "How can this site itself be better?" I'm also wondering what are the limitations on a free github hosted page. 
       </p>
     </div>
     <!-- End Intro Body -->
   </section>
   <!-- End Intro -->
 
-  <!-- <section id="about">
+  <section id="about">
     <div class="row">
       <div class="about-me col-sm-5 offset-sm-1">
         <img
@@ -60,7 +69,7 @@
         <h1>Cliff McCall<span>Full Stack JavaScript Developer</span></h1>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- <section id="skills">
     <div class="container-fluid icons">
@@ -129,7 +138,7 @@
             href="https://github.com/9-10-a/final-project"
             target="blank"
             class="bstA"
-            ><strong>SweatLog Code</strong></a
+            ><strong>SweatLog GitHub Repo</strong></a
           >
         </div>
         <!-- end col -->
@@ -151,9 +160,7 @@
     <!-- end row bst -->
     <div class="row">
       <div class="col">
-        <h1>
-          <a href="https://www.udemy.com/" target="blank">Udemy Courses</a>
-        </h1>
+        <h1>Other Certificates</h1>
         <a class="button" data-modal="#modalOne">Master GitHub</a><br />
         <a class="button" data-modal="#modalTwo"
           >Angular & NodeJS - The MEAN Stack Guide</a
@@ -163,6 +170,9 @@
         ><br />
         <a class="button" data-modal="#modalSix"
           >Selenium WebDriver with C# for Beginners + Live Testing</a
+        ><br />
+        <a class="button" data-modal="#modalSeven"
+          >Wes Bos - React For Beginners</a
         ><br />
       </div>
       <!-- end col -->
@@ -218,7 +228,7 @@
         <a
           href="https://github.com/cliffmccall1/MEAN-stack-course"
           target="blank"
-          >Project GitHub Repository</a
+          >GitHub Repository</a
         >
         <a href="https://www.udemy.com/certificate/UC-8W3HLVW4/" target="blank"
           >Verify Certificate</a
@@ -248,7 +258,7 @@
         <a
           href="https://github.com/cliffmccall1/build-a-burger-app"
           target="blank"
-          >Project GitHub Repository</a
+          >GitHub Repository</a
         >
 
         <a
@@ -281,7 +291,7 @@
         <a
           href="https://github.com/cliffmccall1/Responsive-Web-Design-Certification"
           target="blank"
-          >Project GitHub Repository</a
+          >GitHub Repository</a
         >
 
         <a
@@ -314,7 +324,7 @@
         <a
           href="https://github.com/cliffmccall1/build-a-burger-app"
           target="blank"
-          >Project GitHub Repository</a
+          >GitHub Repository</a
         >
 
         <a href="https://www.udemy.com/certificate/UC-VB0QXDO6/" target="blank"
@@ -345,7 +355,7 @@
         <a
           href="https://github.com/cliffmccall1/Selenium-WebDriver-Beginners"
           target="blank"
-          >Project GitHub Repository</a
+          >GitHub Repository</a
         >
 
         <a href="https://www.udemy.com/certificate/UC-B3UQXVLQ/" target="blank"
@@ -367,6 +377,33 @@
   </div>
   <!-- end modal six -->
 
+    <!-- Udemy - Selenium -->
+    <div id="modalSeven" class="modal">
+      <div class="modal-stuff">
+        <span class="close">&times;</span>
+        <h2>Web Bos - React for Beginners</h2>
+        <div class="modal-links">
+          <a
+            href="https://github.com/cliffmccall1/React-For-Beginners-Wes-Bos"
+            target="blank"
+            >GitHub Repository</a
+            >
+  
+          <a href="https://reactforbeginners.com/" target="blank"
+            >Link to Course</a
+          >
+        </div>
+        <!-- end modal links -->
+        <img
+          class="modal-img"
+          src="https://lh3.googleusercontent.com/gnS4KvpO4AlLRkqcR1fS6zLMNMvyJmiQIEvyy25fzY0nLNKGXB5Uj-noYdA6Jo93iitvruvddBslQiUFtHxeVAP0q9Q9fgyxl6kqvjx7CsPR8kswTKzYk3CfUyERk63pgXBAt2nVbQ=w2400"
+          alt="Wes Bos - React for Beginners"
+        />
+      </div>
+      <!-- end modal content -->
+    </div>
+    <!-- end modal six -->
+
   <!-- MODAL END -->
 
   <footer>
@@ -387,7 +424,7 @@
       /></a>
     </div>
     <!-- end social icons -->
-    <p class="copyright">Copyright 2018 &copy; Cliff McCall</p>
+    <p class="copyright">Copyright 2020 &copy; Cliff McCall</p>
   </footer>
   <!-- end footer -->
 
